tests/parser/for-statement-identifier-error.stderr
error: expected identifier
 --> $DIR/for-statement-identifier-error.lox:1:5
  |
1 | for 5 in
  |     ^
